# passari

./: CHANGELOG.md  README.md  pyproject.toml  requirements_github.txt
docs/: conf.py  configuration.rst  development.rst  installation.rst
src/passari/: config.py  utils.py
src/passari/dpres/: errors.py  package.py  scripts.py
src/passari/museumplus/: connection.py  fields.py  search.py
tests/: conftest.py
tests/dpres/: conftest.py  test_errors.py  test_package.py
tests/museumplus/: conftest.py  test_search.py
tests/museumplus/data/museumplus_mock/module/: README.md
tests/scripts/: test_create_sip.py  test_download_object.py
